--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -440,11 +440,11 @@
 							<div class="footerManu_middle">
 							<ul class="middle_unorderList">
 
-							 <li><a href="#">Home</a></li>
-							 <li><a href="#">About </a></li>
-							 <li><a href="#">Our Vision</a></li>
-							 <li><a href="#">Team</a></li>
-							 <li><a href="#">Contact</a></li>
+								<li><a href="/">Home</a></li>
+								<li><a href="/about">About </a></li>
+								<li><a href="/vision">Our Vision</a></li>
+								<li><a href="/teams">Team</a></li>
+								<li><a href="/contact">Contact</a></li>
 							 </ul>
 							 </div>
 							 <div class="footerManu_paragraph">
@@ -596,4 +596,11 @@ function myFunction() {
 				return false;
 			})
 		</script>
+		   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PR4XX4G');</script>
+    <!-- End Google Tag Manager -->
 </html>
