--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
 ul.middle_unorderList li:nth-child(1) {
     margin-left: 0 !important;
 }
+
 ul.middle_unorderList li a {
     width: auto !important;
     height: auto !important;
@@ -7782,7 +7783,7 @@ img.blog-section-img-tabs {
         width: 67px;
     }
     ul.middle_unorderList li a {
-        font-size: 14px !important;
+        font-size: 13px !important;
     }
 
     .banner-logo-div {
@@ -12375,6 +12376,9 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 768px) {
+    ul.middle_unorderList li a{
+        font-size:13px !important;
+    }
     .new_dwnlod {
         padding-bottom: 30px;
         padding-top: 30px;
@@ -15993,6 +15997,9 @@ img.blog-section-img-tabs {
 }
 
 @media screen and (max-width: 380px) {
+    ul.middle_unorderList li a{
+        font-size:13px !important;
+    }
     .form-wndr-outer.company_section_about {
         padding-top: 35px;
     }
