--- a/templates/base.html
+++ b/templates/base.html
@@ -852,13 +852,13 @@ return false;
     })
     })
   </script> 
-  <script>
+  {% comment %} <script>
     $(document).ready(function(){
       $(document).mouseleave(function(){
           $("#exampleModal").modal("show");
       });
   });
-  </script> 
+  </script>  {% endcomment %}
  </div>
    </div>
 </body>
